package com.example.Editique.constant;

public enum SelectorType {
    JSON , XML
}
