@startuml
'https://plantuml.com/class-diagram

enum SelectorType {
JSON
XML
}

class Template {
    - code: String
    - description: String
    - path: String
}

class TemplateParam {
    - name: String
    - description: String
    - type: String
    - selector: String
    - source: String
}

TemplateParam *-- Template
SelectorType <-- TemplateParam

@enduml